--- a/frontend/src/assets/css/demo.css
+++ b/frontend/src/assets/css/demo.css
@@ -845,3 +845,12 @@
 .btn-primary{
     cursor: pointer!important;
 }
+
+.add-form{
+    padding-left: 0px !important;
+    padding-top: 7px !important;
+}
+
+.font-size-28{
+    font-size: 2.333em !important;
+}
