--- a/frontend/src/assets/css/demo.css
+++ b/frontend/src/assets/css/demo.css
@@ -888,3 +888,9 @@
   border-radius: 40px;
 
 }
+
+/* new css */
+
+.table > thead > tr > th, .table > tbody > tr > td{
+text-align: center !important;
+}
